# HP2SPH_python

./: README.md  __init__.py  main.py  pyproject.toml  pytest.ini
src/: FSHT.py  __init__.py  _bootstrap.py  data_interpolation.py  double_fourier_sphere.py  ft_sphere.py  julia_sph.jl  julia_sph_inverse.jl  nuFFT.py  spin_transform.py
tests/: README.md  conftest.py  pipeline_helpers.py  test_FSHT.py  test_conditioning.py  test_data_interpolation.py  test_double_fourier_sphere.py  test_ft_sphere.py  test_nuFFT.py  test_paper_accuracy.py  test_pipeline.py  test_spin_FSHT.py  test_spin_dfs.py  test_spin_ft_sphere.py  test_spin_paper_accuracy.py  test_spin_plumbing.py
